<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:padding="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back_to_previous_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/edit_account"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/ib_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ib_back"/>

    <EditText
        android:id="@+id/edt_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:background="@drawable/bg_btn_soft_grey"
        android:fontFamily="@font/inter_medium"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:singleLine="true"
        android:enabled="false"
        android:autofillHints="name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="User"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_user_name"/>

    <EditText
        android:id="@+id/edt_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:background="@drawable/bg_btn_soft_grey"
        android:fontFamily="@font/inter_medium"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:singleLine="true"
        android:enabled="false"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        tools:text="user@gmail.com"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/number"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_user_email"/>

    <EditText
        android:id="@+id/edt_user_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:background="@drawable/bg_btn_white"
        android:fontFamily="@font/inter_medium"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:singleLine="true"
        android:autofillHints="phone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_number"
        tools:text="081234567890"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tv_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/birth_date"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_user_number"/>

    <EditText
        android:id="@+id/edt_user_birth_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:background="@drawable/bg_btn_white"
        android:drawableEnd="@drawable/ic_calendar"
        android:drawablePadding="12dp"
        android:fontFamily="@font/inter_medium"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:autofillHints="birthDate"
        android:inputType="date"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_birth_date"
        tools:text="19 Agustus 2024"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_user_birth_date"/>

    <ImageButton
        android:id="@+id/btn_radio_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_btn_radio_checked"
        android:contentDescription="@string/male_radio_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_gender"/>

    <ImageView
        android:id="@+id/iv_gender_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_male_gender"
        android:contentDescription="@string/male"
        app:layout_constraintStart_toEndOf="@id/btn_radio_male"
        app:layout_constraintTop_toTopOf="@id/btn_radio_male"
        app:layout_constraintBottom_toBottomOf="@id/btn_radio_male"/>

    <ImageButton
        android:id="@+id/btn_radio_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:padding="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_btn_radio_unchecked"
        android:contentDescription="@string/female_radio_button"
        app:layout_constraintEnd_toStartOf="@id/iv_gender_female"
        app:layout_constraintTop_toTopOf="@id/btn_radio_male"
        app:layout_constraintBottom_toBottomOf="@id/btn_radio_male"/>

    <ImageView
        android:id="@+id/iv_gender_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_female_gender"
        android:contentDescription="@string/female"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_radio_male"
        app:layout_constraintBottom_toBottomOf="@id/btn_radio_male"/>

    <LinearLayout
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_rounded_corner_blue"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/iv_gender_male">

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/save_change"
            android:textSize="16sp"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/pb_save"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            android:visibility="gone"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>