<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:padding="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back_to_previous_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_my_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/my_account"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/ib_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginVertical="24dp"
        android:src="@drawable/ic_account"
        android:contentDescription="@string/user_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_my_account"/>

    <LinearLayout
        android:id="@+id/edit_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_pencil"
            android:contentDescription="@string/edit_account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/edit_account"
            android:textColor="@color/blue"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:orientation="vertical"
        android:background="@drawable/bg_btn_white"
        app:layout_constraintTop_toBottomOf="@id/edit_account">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="User"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:orientation="vertical"
        android:background="@drawable/bg_btn_white"
        app:layout_constraintTop_toBottomOf="@id/user_name">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="user@gmail.com"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:orientation="vertical"
        android:background="@drawable/bg_btn_white"
        app:layout_constraintTop_toBottomOf="@id/user_email">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/number"
            android:textColor="@color/black"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="081234567890"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_birth_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:orientation="vertical"
        android:background="@drawable/bg_btn_white"
        app:layout_constraintTop_toBottomOf="@id/user_number">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/birth_date"
            android:textColor="@color/black"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="21 Agustus 2024"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:orientation="vertical"
        android:background="@drawable/bg_btn_white"
        app:layout_constraintTop_toBottomOf="@id/user_birth_date">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="@string/male"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>